--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,6 @@
     body,
     #root {
         height: 100%;
-        background: var(--color-bg);
-        color: var(--color-text);
+        background: var(--page-bg);
     }
 }
